--- a/task_zip.yml
+++ b/task_zip.yml
@@ -1,5 +1,7 @@
 ---
-tasks:
+- name: kk
+  hosts: all
+  tasks:
     - name: Compress Directory contents
       archive:
         path: /tmp/test/{{item}}.xml
